# hzclient

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
hzclient/: __init__.py  client.py  state.py  utils.py
hzclient/models/: __init__.py  character.py
tests/: test_models.py
tests/data/: initEnvironment.json  initGame.json  loginUser.json
