[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hzclient"
version = "0.1.0"
description = "A client library for interacting with the HeroZero game API"
authors = [{ name = "Curvu" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.11.10",
  "curl_cffi>=0.13.0",
  "mergedeep>=1.3.4",
  "requests>=2.32.5",
  # add anything else you actually import at runtime:
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hzclient*"]